finished switch statement